# talesoup

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/chat/: ChatPanel.module.css  ChatPanel.tsx
src/components/detail/: DetailPanel.module.css  DetailPanel.tsx
src/components/graph/: ContextMenu.module.css  ContextMenu.tsx  EntityNode.module.css  EntityNode.tsx  GraphCanvas.tsx
src/components/layout/: TopBar.module.css  TopBar.tsx
src/components/tale/: NewTaleModal.module.css  NewTaleModal.tsx  TaleCard.module.css  TaleCard.tsx
src/hooks/: useTauri.ts
src/lib/: graphUtils.ts  sampleData.ts  store.ts
src/pages/: TaleListPage.module.css  TaleListPage.tsx
src/types/: index.ts
