[package]
name = "talesoup"
version = "0.1.0"
description = "TaleSoup - Story Engineering Platform"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "talesoup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"

[profile.dev]
incremental = true
